# Hospital

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/apps/analytics/: __init__.py  apps.py  urls.py  views.py
backend/apps/billing/: __init__.py  admin.py  apps.py  models.py  mpesa.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/billing/migrations/: 0001_initial.py  0002_alter_invoice_issue_date.py
backend/apps/core/: __init__.py  apps.py  exceptions.py  models.py  utils.py
backend/apps/core/management/: __init__.py
backend/apps/core/management/commands/: __init__.py  wait_for_db.py
backend/apps/lab_orders/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/lab_orders/migrations/: 0001_initial.py  0002_initial.py  __init__.py
backend/apps/patients/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/patients/migrations/: 0001_initial.py  __init__.py
backend/apps/security/: __init__.py  admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/security/migrations/: 0001_initial.py
backend/apps/users/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
backend/scripts/: seed_demo_data.py  wait_for_db.py
backend/tests/: conftest.py  test_analytics.py  test_billing.py  test_lab_orders.py  test_patients.py  test_security.py  test_users.py
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: .markdownlint.json  API.md  ARCHITECTURE.md  FILE_INVENTORY.md  MVP_ARCHITECTURE.md  TODO.md  WEEK_1_COMPLETE.md  progress.md  week-2-tasks.md
hospital_management_system/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
hospital_management_system/accounts/migrations/: 0001_initial.py
hospital_management_system/doctors/: models.py  tests.py  views.py
hospital_management_system/doctors/migrations/: 0001_initial.py
hospital_management_system/hospital_management_system/: settings.py  urls.py
hospital_management_system/patients/: models.py  tests.py  views.py
hospital_management_system/patients/migrations/: 0001_initial.py
k8s/: README.md  configmap.yaml  database.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
native/: CMakeLists.txt  pyproject.toml  setup.py
native/include/: libauthz.h  libbill.h  libcutils.h  libhl7val.h
native/python/: __init__.py  _cutils.c  _hl7val.c
native/src/: libauthz.c  libbill.c  libcutils.c  libhl7val.c
native/tests/: CMakeLists.txt  test_authz.c  test_bill.c  test_cutils.c  test_hl7val.c
